--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section id="home" class="pt-36">
       <div class="container">
         <div class="flex flex-wrap">
-          <div class="w-full self-center px-4 lg:w-1/2">
+          <div class="w-full self-center px-12 lg:w-1/2">
             <h1 class="text-base font-semibold text-primary md:text-xl">Hi Everyone 👋, My Name is <span class="block font-bold text-slate-900 text-4xl mt-1 lg:text-5xl"> Yogi Wiguna</span></h1>
             <h2 class="font-medium text-secondary text-lg mb-5">Junior Web Dev</h2>
             <p class="font-medium text-secondary mb-10 leading-relaxed lg:text-2xl">Portofolio</p>
@@ -62,7 +62,7 @@
             </a>
           </div>
           <div class="w-full px-4 lg:w-1/2">
-            <div class="relative mt-10 lg:mt-9 lg:right-0" style="height: 450px">
+            <div class="relative mt-10 lg:mt-9 lg:right-0" style="height: 370px">
               <!-- <img src="dist/img/Yogi_Wiguna.png" alt="Yogi Wiguna" class="max-w-full mx-auto" /> -->
               <span class="absolute -bottom-0 -z-20 left-1/2 -translate-x-1/2 md:scale-125">
                 <!-- <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
@@ -84,7 +84,7 @@
     <section id="about" class="pt-36 pb-32">
       <div class="container">
         <div class="flex flex-wrap">
-          <div class="w-full px-4 mb-10 lg:w-1/2">
+          <div class="w-full px-4 mb-10 lg:w-1/2" style="height: 370px">
             <h4 class="font-bold uppercase text-primary text-lg mb-3">About Me</h4>
             <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Hello Everyone</h2>
             <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">I'm Yogi Wiguna a junior web developer. I love to learn new things in programming</p>
