--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p class="font-medium text-secondary mb-10 leading-relaxed lg:text-2xl">Portofolio</p>
             <!-- <a href="#contact" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">Contact Me</a> -->
             <a
-              href="https://drive.google.com/file/d/1ZK2fXEdFkSF2WtVRDmgxO2gwx2eM9N-L/view?usp=sharing"
+              href="https://drive.google.com/file/d/1i1tQGOVA-VXsZbvMAl998mcYkhfpHnDu/view?usp=sharing"
               target="_blank"
               class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
               >Download My CV
@@ -156,7 +156,7 @@
           <div class="max-w-xl mx-auto text-center mb-16">
             <h4 class="font-semibold text-lg text-primary mb-2">Portofolio</h4>
             <h2 class="font-bold text-dark text-3xl mb-4">Project</h2>
-            <p class="font-medium text-md text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate sint, eum adipisci temporibus voluptates excepturi perferendis quod doloribus quam. Quisquam.</p>
+            <p class="font-medium text-md text-secondary">Here's some of my project that i made</p>
           </div>
         </div>
 
@@ -165,36 +165,15 @@
             <div class="rounded-md shadow-md overflow-hidden">
               <img src="dist/img/portofolio/1.png" alt="Project 1" width="w-full" />
             </div>
-            <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Project 1</h3>
-            <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad laudantium iste suscipit non hic repellendus.</p>
+            <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Portofolio (Bootstrap 5)</h3>
+            <p class="font-medium text-base text-secondary">Portofolio website for myself with Bootstrap 5.</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
               <img src="dist/img/portofolio/2.png" alt="Project 2" width="w-full" />
             </div>
-            <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Project 2</h3>
-            <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad laudantium iste suscipit non hic repellendus.</p>
-          </div>
-          <div class="mb-12 p-4 md:w-1/2">
-            <div class="rounded-md shadow-md overflow-hidden">
-              <img src="dist/img/portofolio/3.png" alt="Project 3" width="w-full" />
-            </div>
-            <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Project 3</h3>
-            <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad laudantium iste suscipit non hic repellendus.</p>
-          </div>
-          <div class="mb-12 p-4 md:w-1/2">
-            <div class="rounded-md shadow-md overflow-hidden">
-              <img src="dist/img/portofolio/4.png" alt="Project 4" width="w-full" />
-            </div>
-            <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Project 4</h3>
-            <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad laudantium iste suscipit non hic repellendus.</p>
-          </div>
-          <div class="mb-12 p-4 md:w-1/2">
-            <div class="rounded-md shadow-md overflow-hidden">
-              <img src="dist/img/portofolio/5.png" alt="Project 5" width="w-full" />
-            </div>
-            <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Project 5</h3>
-            <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad laudantium iste suscipit non hic repellendus.</p>
+            <h3 class="font-semibold text-dark text-xl mt-5 mb-3">Grand Chase Web</h3>
+            <p class="font-medium text-base text-secondary">Grand Chase web portofolio for my course in Dicoding.com</p>
           </div>
         </div>
       </div>
